--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+/* This is your base.css */
+
+
 *, *::after, *::before {
   margin: 0;
   padding: 0;
@@ -46,6 +49,17 @@ html {
   background-position: center;
   background-size: cover; */
 }
+
+.glassMorph {
+  /* Glass morph */
+  background-color: transparent;
+  backdrop-filter: blur(3px);
+  background-image: linear-gradient(120deg,
+          #051f0088,
+          #ffffff55,
+          #b6f80155);
+}
+
 
 
 
