--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -9,11 +9,9 @@
 .homeScrollDiv {
     /* border: 2px solid gold; */
     height: 4000px;
-    /* position: relative; */
 }
 
 .homeDisplay {
-    /* border: 2px solid red; */
     height: 100dvh;
     width: 100%;
     position: sticky;
@@ -29,13 +27,13 @@
     z-index: 0;
 }
 
-.parallaxText {
-    color: #d0d0d0;
+.homeTextStyle {
+    color: #e5e5e5;
     z-index: 10;
     position: absolute;
     text-align: center;
     font-weight: 700;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -79,7 +77,6 @@
     font-size: 10vw;
     top: 30%;
     left: 0%;
-    /* word-spacing: 20px; */
 }
 
 .epicStories {
@@ -122,50 +119,24 @@
     gap: 20px;
 }
 
-.bannerLink {
+.menuBanner {
     /* border: 2px solid blue; */
     height: 12%;
     white-space: nowrap;
     margin-left: -10px;
-    /* position: relative; */
     overflow: hidden;
     transform: rotateX(15deg) rotateY(-10deg);
     z-index: 10;
 }
 
-.bannerLink a {
+.bannerText {
     /* border: 2px solid red; */
-    /* border-top: 1px solid red; */
     border-top: 2px solid white;
     border-bottom: 2px solid white;
+    font-family: wildGrowth;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: wildGrowth;
     text-decoration: none;
-    color: white;
     font-size: 7.5dvw;
-    font-weight: 700;
     padding: 0px 0px 6px 10px;
-    letter-spacing: 3px;
-    z-index: 10;
-    text-shadow:
-        1px 1px 2px rgba(0, 0, 0, 0.8),
-        2px 2px 5px rgba(0, 0, 0, 0.7),
-        3px 3px 8px rgba(0, 0, 0, 0.6),
-        4px 4px 11px rgba(0, 0, 0, 0.5),
-        5px 5px 14px rgba(0, 0, 0, 0.4);
-}
-
-.colorChange {
-    color: #88d100;
-    color: silver;
-    background-color: #041800;
-}
-
-.homeMenu img {
-    border: 2px solid red;
-    flex: 8;
 }
