--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -5,6 +5,7 @@
     display: block;
     overflow: scroll;
     scroll-snap-type: y mandatory;
+    /* scroll-padding: 1rem; */
 }
 
 .galleryScrollDiv {
@@ -17,5 +18,32 @@
     height: 100dvh;
     width: 100%;
     scroll-snap-align: start;
+    position: relative;
+    /* position: sticky; */
+    /* top: 0; */
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+/* .lotrWrapper {
+    border: 2px solid purple;
+    position: relative;
+    width: 95%;
+    height: 95%;
+    will-change: transform;
+} */
+
+.lotrDisplay {
+    border: 2px solid lime;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: grey;
+
 }
 
