--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -2,40 +2,32 @@
     border: 2px solid blue;
     width: 100dvw;
     height: 100dvh;
-    display: block;
-    overflow: scroll;
+    /* display: block; */
 }
 
-.galleryScrollDiv {
-    border: 2px solid gold;
-    height: 5000px;
-}
 
-.galleryDisplay {
-    border: 2px solid lime;
-    width: 100%;
-    height: 100dvh;
-    position: sticky;
-    top: 0;
-}
-
-.groupDisplay {
+.gallerySection {
     border: 2px solid red;
-    height: 100dvh;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    height: 90dvh;
+    width: 90%;
+}
 
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
+.lotrDisplay {
+    border: 2px solid lime;
+    background-color: lightblue;
+}
+.starWarsDisplay {
+    border: 2px solid lime;
+    background-color: grey;
+}
+.terrainDisplay {
+    border: 2px solid lime;
+    background-color: rgb(0, 42, 0);
 }
 
 
-.emptyElement {
-    border: 2px solid blue;
-    height: 50dvh;
-}
+
+
+
+
 
