--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -10,6 +10,17 @@
     border: 2px solid red;
     height: 90dvh;
     width: 90%;
+    background-color: lightgrey;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+    position: relative;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+.gallerySection > div {
+    transform-style: preserve-3d;
 }
 
 .lotrDisplay {
