--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -21,7 +21,7 @@
     border: 2px solid red;
     height: 90dvh;
     width: 90%;
-    background-color: #d3d3d377;
+    /* background-color: #d3d3d377; */
     perspective: 1000px;
     transform-style: preserve-3d;
     position: relative;
@@ -36,7 +36,9 @@
 
 .lotrDisplay {
     border: 2px solid lime;
-    background-color: lightblue;
+    background-color: #3f000033;
+    width: 100%;
+    height: 100%;
 }
 .starWarsDisplay {
     border: 2px solid lime;
