--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -1,5 +1,6 @@
 .galleryPage {
     border: 2px solid blue;
+    background-color: grey;
     width: 100dvw;
     height: 100dvh;
     display: flex;
@@ -19,6 +20,8 @@
 
 .gallerySection {
     border: 2px solid red;
+    overflow: hidden;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5); /* Adjust values as needed */
     height: 90dvh;
     width: 90%;
     /* background-color: #d3d3d377; */
@@ -29,6 +32,7 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+
 }
 .gallerySection > div {
     transform-style: preserve-3d;
@@ -39,7 +43,23 @@
     background-color: #3f000033;
     width: 100%;
     height: 100%;
+    scroll-snap-type: x mandatory;
+    display: flex;
+    flex-flow: row nowrap;
+    overflow: scroll;
+    /* overflow-y: hidden; */
 }
+
+.displaySection {
+    border: 2px solid blue;
+    width: 100%;
+    height: 100%;
+    scroll-snap-align: start;
+    flex-shrink: 0;
+}
+
+
+
 .starWarsDisplay {
     border: 2px solid lime;
     background-color: grey;
