--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -10,8 +10,8 @@
 }
 
 .sectionIcon {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 70%;
     position: absolute;
     top: -10%;
     left: -30%;
@@ -43,22 +43,9 @@
     background-color: #3f000033;
     width: 100%;
     height: 100%;
-    scroll-snap-type: x mandatory;
     display: flex;
-    flex-flow: row nowrap;
-    overflow: scroll;
-    /* overflow-y: hidden; */
+    flex-flow: column nowrap;
 }
-
-.displaySection {
-    border: 2px solid blue;
-    width: 100%;
-    height: 100%;
-    scroll-snap-align: center;
-    /* flex-shrink: 0; */
-    flex: 0 0 100%;
-}
-
 
 
 .starWarsDisplay {
