--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -63,7 +63,7 @@
 
 /* gradient styles */
 
-.swGradient {
+/* .swGradient {
     background-image: linear-gradient(
       50deg,
       hsl(240deg 100% 4%) 0%,
@@ -75,7 +75,7 @@
       hsl(208deg 100% 39%) 95%,
       hsl(202deg 100% 44%) 100%
     );
-  }
+  } */
 
 
 /* const gradientColor = useTransform(homeContainer, [0, 1], [
