--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -60,9 +60,9 @@
 }
 
 .displayButtons {
-    border: 2px solid gold;
+    /* border: 2px solid gold; */
     position: absolute;
-    top: 20%;
+    top: 16%;
     right: 5%;
     width: 25%;
     height: 25%;
@@ -81,7 +81,6 @@
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0) 80%);
     /* overflow: hidden; */
     /* box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5); */
-    /* height: 90dvh; */
     width: 90%;
     transform-style: preserve-3d;
     perspective: 1000px;
@@ -89,17 +88,17 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-end;
-    /* align-items: center; */
 }
 
 .displayContent {
-    border: 2px solid lime;
+    /* border: 2px solid lime; */
     width: 100%;
-    height: 100%;
+    height: 80%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+    gap: 15px;
 }
 
 .gallerySection>div {
@@ -113,8 +112,8 @@
     height: 30dvh;
     object-fit: contain;
     position: absolute;
-    top: 0%;
-    left: 0%;
+    top: -18%;
+    left: 5%;
     filter: drop-shadow(2px 2px 10px rgba(0, 0, 0, 0.75));
 }
 
@@ -133,8 +132,8 @@
 
 .displayDescription {
     /* border: 2px solid gold; */
-    /* height: 30%;
-    width: 90%; */
+    height: 20%;
+    width: 90%;
     text-align: center;
 }
 
@@ -153,7 +152,7 @@
 
 .arrowButton {
     border: none;
-    /* border: 2px solid lime; */
+    border: 2px solid lime;
     cursor: pointer;
     background: none;
     display: flex;
