--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -1,5 +1,5 @@
 .galleryPage {
-    /* border: 2px solid blue; */
+    border: 2px solid blue;
     /* background-color: rgb(18, 18, 18); */
     /* background: radial-gradient(circle, rgb(30, 30, 30) 0%, rgb(20, 20, 20) 40%, rgb(10, 10, 10) 100%); */
     background: radial-gradient(circle, rgb(146, 146, 146) 0%, rgb(112, 112, 112) 40%, rgb(10, 10, 10) 100%);
@@ -40,7 +40,7 @@
 
 
 .displayIcon {
-    /* border: 2px solid white; */
+    border: 2px solid white;
     width: 45dvh;
     height: 45dvh;
     position: absolute;
@@ -49,7 +49,7 @@
 }
 
 .sectionButtons {
-    /* border: 2px solid lime; */
+    border: 2px solid lime;
     flex: 1;
     width: 100%;
     height: 100%;
@@ -60,7 +60,7 @@
 }
 
 .displayButtons {
-    /* border: 2px solid gold; */
+    border: 2px solid gold;
     position: absolute;
     top: 16%;
     right: 5%;
@@ -91,7 +91,7 @@
 }
 
 .displayContent {
-    /* border: 2px solid lime; */
+    border: 2px solid lime;
     width: 100%;
     height: 80%;
     display: flex;
@@ -119,7 +119,7 @@
 
 
 .displayTitle {
-    /* border: 2px solid gold; */
+    border: 2px solid gold;
     font-size: 10dvw;
     font-weight: 700;
 }
@@ -131,7 +131,7 @@
 }
 
 .displayDescription {
-    /* border: 2px solid gold; */
+    border: 2px solid gold;
     height: 20%;
     width: 90%;
     text-align: center;
@@ -162,7 +162,12 @@
     width: 80px;
     height: 80px;
     gap: var(--dot-size);
+    z-index: 100;
 }
+.arrowButton * {
+    cursor: pointer;
+}
+
 .upArrow {
     transform: rotate(180deg);
 }
@@ -178,7 +183,7 @@
     height: var(--dot-size);
     background: #3da9fc;
     background: #fff;
-    /* border: 1px solid white; */
+    /* border: 1px solid blue; */
     border-radius: 50%;
     transform: translateY(-5px);
 }
